Fixing compatibilyt java 8 problem